[UI] Fix vertical overflow bug on graph container

--- a/frontend/app/index.css
+++ b/frontend/app/index.css
@@ -112,6 +112,7 @@ form[action$="destroy"] button {
   padding: 2rem 2rem;
   max-width: calc(100vw - 20rem);
   overflow-x: hidden; 
+  overflow-y: hidden;
   background-color: #fff;
   box-sizing: border-box;
   flex: 1;
